examples/bad/wrong_func_type_decl_2.ez
f : Integer -> Bool -> Integer;
f x = lambda{Integer -> Bool} y -> x =/= y;

main : Integer;
main = f 0 True;
